--- a/stories/nn/0009_kvor-er-katten-min.html
+++ b/stories/nn/0009_kvor-er-katten-min.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Var är min katt?</title>
+    <title>Kor er katten min?</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -29,67 +29,67 @@
   <body>
 <div class='cover'><img src="https://global-asp.github.io/img/0009/01.jpg" />
 
-<h1 id="var-r-min-katt">Var är min katt?</h1>
+<h1 id="kor-er-katten-min">Kor er katten min?</h1>
 
-Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>svenska</div>
+Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div>
 
 <p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
 
-<p>Var är min katt?</p>
+<p>Kor er katten min?</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
 
-<p>Är den under sängen?</p>
+<p>Er han under senga?</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
 
-<p>Är den ovanpå skåpet?</p>
+<p>Er han på toppen av skapet?</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
 
-<p>Er den bak soffan?</p>
+<p>Er han bak sofaen?</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
 
-<p>Er den bredvid av soptunnan?</p>
+<p>Er han ved sida av bøtta?</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
 
-<p>Er den i korgen?</p>
+<p>Er han inne i korgen?</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
 
-<p>Er den utanför huset?</p>
+<p>Er han utanfor huset?</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
 
-<p>Här är den!</p>
+<p>Her er han!</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br />Illustrations: Bronwen Heath, Anonymous<br />Translation: Espen Stranger-Johannessen<br />Language: Swedish</p>
+<p>Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br />Illustrations: Bronwen Heath, Anonymous<br />Translation: Espen Stranger-Johannessen<br />Language: Norwegian (Nynorsk)</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/where-my-cat">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
