--- a/stories/no/0002_se-på-dyrene_slides.html
+++ b/stories/no/0002_se-på-dyrene_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0002/02.jpg" /></p>
-<p>See på dyrene.</p>
+<p>Se på dyrene.</p>
 <center>
 <strong>1</strong>
 </center>
