--- a/stories/no/0009_hvor-er-katten-min_slides.html
+++ b/stories/no/0009_hvor-er-katten-min_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den ved siden av bøtta?</p>
+<p>Er den ved siden av søppelbøtta?</p>
 <center>
 <strong>5</strong>
 </center>
