--- a/stories/no/0204_akatope_slides.html
+++ b/stories/no/0204_akatope_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
-<p>Da den gamle damen hørte hva some hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
+<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
 <center>
 <strong>9</strong>
 </center>
