--- a/stories/sv/0204_akatope.html
+++ b/stories/sv/0204_akatope.html
@@ -31,107 +31,107 @@
 
 <h1 id="akatope">Akatope</h1>
 
-Alice Kapolondo<br>norsk</div>
+Alice Kapolondo<br>svenska</div>
 
 <p><img src="https://global-asp.github.io/img/0204/02.jpg" /></p>
 
-<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
+<p>Det var en gång en gammal dam som alltid hade velat ett barn.</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/03.jpg" /></p>
 
-<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p>Hon tog den bästa lerjord hon kunde hitta och började skapa en flicka.</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/04.jpg" /></p>
 
-<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
+<p>Flickan som var gjord av lera var en riktig människa flicka.</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/05.jpg" /></p>
 
-<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p>Den gamla damen var mycket glad. Hon kallade flickan Akatope. Hon var mycket förtjust i Akatope.</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/06.jpg" /></p>
 
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
+<p>Akatope varnades av sin gamla mor att hon inte fick komma ut ur hyddan, men hon lyssnade inte. Varje gång hennes mor inte var medveten om det, smög Akatope ut för att leka med de andra barnen.</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/07.jpg" /></p>
 
-<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
+<p>En dag när Akatope var ute och lekte med de andra barnen, började det regna kraftigt.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/08.jpg" /></p>
 
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
+<p>De andra barnen sprang till sina hyddor, men sedan Akatope sprang till henne, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/09.jpg" /></p>
 
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akapope. De var lei seg og sjokkerte.</p>
+<p>De andra barnen berättade sina föräldrar vad som hade hänt med Akapope. De var upprörda och chockade.</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
 
-<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
+<p>När den gamla damen hörde vad som hade drabbat hennes barn, ropade hon i flera dagar. Byborna har beslutat att ta med en annan liten flicka som hade blivit föräldralös till at ta Akatopes plats.</p>
 
 <div class="pagenum">9</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/11.jpg" /></p>
 
-<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
+<p>Men det var inte nödvändigt. En stor överraskning väntade den gamla damen!</p>
 
 <div class="pagenum">10</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/12.jpg" /></p>
 
-<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
+<p>Några dagar efter at den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
 
 <div class="pagenum">11</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/13.jpg" /></p>
 
-<p>“Hvem kan det være,” undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
+<p>“Vem kan det vara,” förundrade den gamla damen. När hon öppnade dörren hon var utom sig av upphetsning.</p>
 
 <div class="pagenum">12</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/14.jpg" /></p>
 
-<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
+<p>Akatope hade kommit hem. Men hon var trött och sjuk.</p>
 
 <div class="pagenum">13</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/15.jpg" /></p>
 
-<p>Akatopes gamle mor solgte alt hun eide. HUn brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
+<p>Akatopes gamla mor sålde allt hon ägde. Hon använde pengarna till att behandla Akatope. Akatope växte upp till att bli den vackraste flickan i byn.</p>
 
 <div class="pagenum">14</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Alice Kapolondo<br />Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br />Translation: Espen Stranger-Johannessen<br />Language: Norwegian</p>
+<p>Writer: Alice Kapolondo<br />Illustrations: Catherine Groenewald, Microsoft Clip Art och Wiehan de Jager<br />Translation: Espen Stranger-Johannessen<br />Language: Swedish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/akatope">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
