--- a/stories/da/0001_en-riktigt-høj-mand_slides.html
+++ b/stories/da/0001_en-riktigt-høj-mand_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="var-är-min-katt" class="slide level1">
-<h1>Var är min katt?</h1>
+<section id="en-rigtigt-høj-mand" class="slide level1">
+<h1>En rigtigt høj mand</h1>
 <center>
-<img src="https://global-asp.github.io/img/0009/01.jpg" />
+<img src="https://global-asp.github.io/img/0001/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Var är min katt?</p>
+<p><img src="https://global-asp.github.io/img/0001/02.jpg" /></p>
+<p>Hakken hans var for kort.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Är den under sängen?</p>
+<p><img src="https://global-asp.github.io/img/0001/03.jpg" /></p>
+<p>Døråbningen hans var for lav.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Är den ovanpå skåpet?</p>
+<p><img src="https://global-asp.github.io/img/0001/04.jpg" /></p>
+<p>Hans seng var for kort.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p><img src="https://global-asp.github.io/img/0001/05.jpg" /></p>
+<p>Hans cykel var for kort.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p><img src="https://global-asp.github.io/img/0001/06.jpg" /></p>
+<p>Denne mand var for høj!</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p><img src="https://global-asp.github.io/img/0001/07.jpg" /></p>
+<p>Han lavede et rigtigt langt hakkeskaft.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
+<p><img src="https://global-asp.github.io/img/0001/08.jpg" /></p>
+<p>Han lavede en rigtigt høj dørramme.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Här är den!</p>
+<p><img src="https://global-asp.github.io/img/0001/09.jpg" /></p>
+<p>Han lavede en rigtigt lang seng.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="var-är-min-katt-1">Var är min katt?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
+<p><img src="https://global-asp.github.io/img/0001/10.jpg" /></p>
+<p>Han købte en rigtigt høj cykel.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0001/11.jpg" /></p>
+<p>Han sad på en rigtigt høj stol. Han spiste med en rigtigt lang gaffel.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0001/12.jpg" /></p>
+<p>Han forlod sit hus og boede i en stor skov. Han levede i mange år.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="en-rigtigt-høj-mand-1">En rigtigt høj mand</h2>
+Writer: Cornelius Gulere<br> Illustrations: Catherine Groenewald<br> Translation: Espen Stranger-Johannessen<br> Language: Danish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man-1'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
