--- a/stories/de/0009_wo_ist_meine_katze_slides.html
+++ b/stories/de/0009_wo_ist_meine_katze_slides.html
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="var-är-min-katt" class="slide level1">
-<h1>Var är min katt?</h1>
+<section id="wo-ist-meine-katze" class="slide level1">
+<h1>Wo ist meine Katze?</h1>
 <center>
 <img src="https://global-asp.github.io/img/0009/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Var är min katt?</p>
+<p>Wo ist meine Katze?</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Är den under sängen?</p>
+<p>Ist sie unter dem Bett?</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Är den ovanpå skåpet?</p>
+<p>Ist die oben auf dem Schrank?</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p>Ist sie hinter dem Sofa?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p>Ist se neben der Mülltonne?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p>Ist sie im Korb?</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
+<p>Ist sie außerhalb des Haus?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Här är den!</p>
+<p>Hier ist sie!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<h2 id="var-är-min-katt-1">Var är min katt?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
+<h2 id="wo-ist-meine-katze-1">Wo ist meine Katze?</h2>
+Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: German<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
