--- a/stories/eo/0006_anansi_kaj_saĝeco_slides.html
+++ b/stories/eo/0006_anansi_kaj_saĝeco_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="var-är-min-katt" class="slide level1">
-<h1>Var är min katt?</h1>
+<section id="anansi-kaj-saĝeco" class="slide level1">
+<h1>Anansi kaj saĝeco</h1>
 <center>
-<img src="https://global-asp.github.io/img/0009/01.jpg" />
+<img src="https://global-asp.github.io/img/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Var är min katt?</p>
+<p><img src="https://global-asp.github.io/img/0006/02.jpg" /></p>
+<p>Longe, longe antaŭe la homoj ne sciis ion ajn. Ili ne sciis kiel farmi kultivaĵojn aŭ kiel teksi tukojn aŭ kiel fari ferajn ilojn. La dio Nyame supre en la ĉielo havis ĉion saĝecon de la mondo. Li tenis ĝin sekura en argila kruĉo.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Är den under sängen?</p>
+<p><img src="https://global-asp.github.io/img/0006/03.jpg" /></p>
+<p>Unu tagon, Nyame decidis ke li donos la kruĉon de saĝeco al Anansi. Ĉiam kiam Anansi rigardis en la argila kruĉo, li lernis ion novan. Ĝi estis tiel ekscita!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Är den ovanpå skåpet?</p>
+<p><img src="https://global-asp.github.io/img/0006/04.jpg" /></p>
+<p>Avida Anansi pensis, “mi tenos la kruĉon ĉe la supro de alta arbo. Tiam mi povas havi ĉion al mi mem!” Li ŝpinis longan fadenon, bobenis ĝin ĉirkaŭ la argilan kruĉon kaj ligis ĝin al lia stomako. Li komencis grimpi la arbon. Sed estis malfacile grimpi la arbon kun la kruĉo frapanta liajn genuojn la tutan tempon.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p><img src="https://global-asp.github.io/img/0006/05.jpg" /></p>
+<p>La tutan tempon la juna filo de Anansi estis observado ĉe la fundo de la arbo. Li diris, “Ĉu ĝi ne estus pli facile grimpi se vi anstataŭe ligus la kruĉon al via dorso?” Anansi provis ligi la argilan kruĉon plena de saĝeco al lia dorso, kaj ĝi vere estis multe pli facila.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p><img src="https://global-asp.github.io/img/0006/06.jpg" /></p>
+<p>En neniu tempo li atingis la supron de la arbo. Sed tiam li haltis pensante, “mi estas supozeble la unua kun ĉio saĝeco kaj ĉi tie mia filo estis pli lerta ol mi!” Anansi estis tiel kolera pri tio ĉi ke li ĵetis la argilan kruĉon malsupren ekstere de la arbo.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p><img src="https://global-asp.github.io/img/0006/07.jpg" /></p>
+<p>Ĝi frakasis en pecoj sur la tero. La saĝeco estis libera por dividi inter ĉiuj. Kaj estas tiel kiel homoj lernis farmi, teksi tukojn, fari ferajn ilojn kaj ĉiujn la aliajn aferojn ke homoj scias fari.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,36 +150,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Här är den!</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="var-är-min-katt-1">Var är min katt?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
+<h2 id="anansi-kaj-saĝeco-1">Anansi kaj saĝeco</h2>
+Writer: Ghanaian folktale<br> Illustrations: Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Esperanto<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
