--- a/stories/index.html
+++ b/stories/index.html
@@ -692,7 +692,7 @@
       <td>Wo ist meine Katze?</td>
       <td style="text-align: center"><a href="/stories/de/0009_wo_ist_meine_katze.html">HTML</a> · <a href="/stories/de/0009_wo_ist_meine_katze_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
-      <td> </td>
+      <td><a name="de0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
 </table>
@@ -905,7 +905,7 @@
       <td>Anansi y sabiduría</td>
       <td style="text-align: center"><a href="/stories/es/0006_anansi_y_sabiduría.html">HTML</a> · <a href="/stories/es/0006_anansi_y_sabiduría_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></td>
-      <td> </td>
+      <td><a name="es0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0008</td>
