--- a/stories/nn/0002_sjå-på-dyra.html
+++ b/stories/nn/0002_sjå-på-dyra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Var är min katt?</title>
+    <title>Sjå på dyra</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -22,75 +22,75 @@
         font-weight: bold;
       }
       .cover {
-        background-color: #F3BE17;
+        background-color: #D8852A;
       }
     </style>
   </head>
   <body>
-<div class='cover'><img src="https://global-asp.github.io/img/0009/01.jpg" />
+<div class='cover'><img src="https://global-asp.github.io/img/0002/01.jpg" />
 
-<h1 id="var-r-min-katt">Var är min katt?</h1>
+<h1 id="sj-p-dyra">Sjå på dyra</h1>
 
-Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>svenska</div>
+Jenny Katz<br>nynorsk</div>
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/02.jpg" /></p>
 
-<p>Var är min katt?</p>
+<p>Sjå på dyra.</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/03.jpg" /></p>
 
-<p>Är den under sängen?</p>
+<p>Kua seier “mø”.</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/04.jpg" /></p>
 
-<p>Är den ovanpå skåpet?</p>
+<p>Geita seier “mæ”.</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/05.jpg" /></p>
 
-<p>Er den bak soffan?</p>
+<p>Hesten seier “vrinsk”.</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/06.jpg" /></p>
 
-<p>Er den bredvid av soptunnan?</p>
+<p>Grisen seier “grynt”.</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/07.jpg" /></p>
 
-<p>Er den i korgen?</p>
+<p>Høna seier “klukk”.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/08.jpg" /></p>
 
-<p>Er den utanför huset?</p>
+<p>Hunden seier “voff”.</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0002/09.jpg" /></p>
 
-<p>Här är den!</p>
+<p>Bonden seier “hysj!”</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br />Illustrations: Bronwen Heath, Anonymous<br />Translation: Espen Stranger-Johannessen<br />Language: Swedish</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/where-my-cat">here</a>
+<p>Writer: Jenny Katz<br />Illustrations: Sandy Campbell<br />Translation: Espen Strangar-Johannessen<br />Language: Norwegian (Nynorsk)</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/look-animals">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
