--- a/stories/nn/0003_skuleklede_slides.html
+++ b/stories/nn/0003_skuleklede_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="var-är-min-katt" class="slide level1">
-<h1>Var är min katt?</h1>
+<section id="skuleklede" class="slide level1">
+<h1>Skuleklede</h1>
 <center>
-<img src="https://global-asp.github.io/img/0009/01.jpg" />
+<img src="https://global-asp.github.io/img/0003/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Var är min katt?</p>
+<p><img src="https://global-asp.github.io/img/0003/02.jpg" /></p>
+<p>Denne kjolen er lang.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Är den under sängen?</p>
+<p><img src="https://global-asp.github.io/img/0003/03.jpg" /></p>
+<p>Denne genseren er stor.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Är den ovanpå skåpet?</p>
+<p><img src="https://global-asp.github.io/img/0003/04.jpg" /></p>
+<p>Denne veska er stor.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p><img src="https://global-asp.github.io/img/0003/05.jpg" /></p>
+<p>Dette beltet er...</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p><img src="https://global-asp.github.io/img/0003/06.jpg" /></p>
+<p>Denne hatten er liten.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p><img src="https://global-asp.github.io/img/0003/07.jpg" /></p>
+<p>Sokkane er korte.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
+<p><img src="https://global-asp.github.io/img/0003/08.jpg" /></p>
+<p>Men desse skorne er nye.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Här är den!</p>
+<p><img src="https://global-asp.github.io/img/0003/09.jpg" /></p>
+<p>... dei passar godt.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="var-är-min-katt-1">Var är min katt?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
+<h2 id="skuleklede-1">Skuleklede</h2>
+Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Mlungisi Dlamini, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian (Nynorsk)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/school-clothes'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
