--- a/stories/no/0002_se-på-dyrene.html
+++ b/stories/no/0002_se-på-dyrene.html
@@ -35,7 +35,7 @@ Jenny Katz<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0002/02.jpg" /></p>
 
-<p>See på dyrene.</p>
+<p>Se på dyrene.</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
