--- a/stories/no/0009_hvor-er-katten-min.html
+++ b/stories/no/0009_hvor-er-katten-min.html
@@ -63,7 +63,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
 
-<p>Er den ved siden av bøtta?</p>
+<p>Er den ved siden av søppelbøtta?</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
