--- a/stories/sv/0204_akatope_slides.html
+++ b/stories/sv/0204_akatope_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="var-är-min-katt" class="slide level1">
-<h1>Var är min katt?</h1>
+<section id="akatope" class="slide level1">
+<h1>Akatope</h1>
 <center>
-<img src="https://global-asp.github.io/img/0009/01.jpg" />
+<img src="https://global-asp.github.io/img/0204/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Var är min katt?</p>
+<p><img src="https://global-asp.github.io/img/0204/02.jpg" /></p>
+<p>Det var en gång en gammal dam som alltid hade velat ett barn.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Är den under sängen?</p>
+<p><img src="https://global-asp.github.io/img/0204/03.jpg" /></p>
+<p>Hon tog den bästa lerjord hon kunde hitta och började skapa en flicka.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Är den ovanpå skåpet?</p>
+<p><img src="https://global-asp.github.io/img/0204/04.jpg" /></p>
+<p>Flickan som var gjord av lera var en riktig människa flicka.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Er den bak soffan?</p>
+<p><img src="https://global-asp.github.io/img/0204/05.jpg" /></p>
+<p>Den gamla damen var mycket glad. Hon kallade flickan Akatope. Hon var mycket förtjust i Akatope.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den bredvid av soptunnan?</p>
+<p><img src="https://global-asp.github.io/img/0204/06.jpg" /></p>
+<p>Akatope varnades av sin gamla mor att hon inte fick komma ut ur hyddan, men hon lyssnade inte. Varje gång hennes mor inte var medveten om det, smög Akatope ut för att leka med de andra barnen.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den i korgen?</p>
+<p><img src="https://global-asp.github.io/img/0204/07.jpg" /></p>
+<p>En dag när Akatope var ute och lekte med de andra barnen, började det regna kraftigt.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Er den utanför huset?</p>
+<p><img src="https://global-asp.github.io/img/0204/08.jpg" /></p>
+<p>De andra barnen sprang till sina hyddor, men sedan Akatope sprang till henne, började hennes ben att upplösas. Hon böjde sig ner bland buskarna.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Här är den!</p>
+<p><img src="https://global-asp.github.io/img/0204/09.jpg" /></p>
+<p>De andra barnen berättade sina föräldrar vad som hade hänt med Akapope. De var upprörda och chockade.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,72 @@
 </section>
 <section class="slide level1">
 
-<h2 id="var-är-min-katt-1">Var är min katt?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
+<p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
+<p>När den gamla damen hörde vad som hade drabbat hennes barn, ropade hon i flera dagar. Byborna har beslutat att ta med en annan liten flicka som hade blivit föräldralös till at ta Akatopes plats.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/11.jpg" /></p>
+<p>Men det var inte nödvändigt. En stor överraskning väntade den gamla damen!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/12.jpg" /></p>
+<p>Några dagar efter at den föräldralösa flickan hade välkomnats i den gamla damens hem, knackade på dörren.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/13.jpg" /></p>
+<p>&quot;Vem kan det vara,&quot; förundrade den gamla damen. När hon öppnade dörren hon var utom sig av upphetsning.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/14.jpg" /></p>
+<p>Akatope hade kommit hem. Men hon var trött och sjuk.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0204/15.jpg" /></p>
+<p>Akatopes gamla mor sålde allt hon ägde. Hon använde pengarna till att behandla Akatope. Akatope växte upp till att bli den vackraste flickan i byn.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="akatope-1">Akatope</h2>
+Writer: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art och Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Swedish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
