--- a/stories/de/0008_was_tust_du_slides.html
+++ b/stories/de/0008_was_tust_du_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="wo-ist-meine-katze" class="slide level1">
-<h1>Wo ist meine Katze?</h1>
+<section id="was-tust-du" class="slide level1">
+<h1>Was tust du?</h1>
 <center>
-<img src="https://global-asp.github.io/img/0009/01.jpg" />
+<img src="https://global-asp.github.io/img/0008/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
-<p>Wo ist meine Katze?</p>
+<p><img src="https://global-asp.github.io/img/0008/02.jpg" /></p>
+<p>Ich singe.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
-<p>Ist sie unter dem Bett?</p>
+<p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
+<p>Sie winkt.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
-<p>Ist sie oben auf dem Schrank?</p>
+<p><img src="https://global-asp.github.io/img/0008/04.jpg" /></p>
+<p>Ich klatsche.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
-<p>Ist sie hinter dem Sofa?</p>
+<p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
+<p>Sie streckt sich.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Ist se neben der Mülltonne?</p>
+<p><img src="https://global-asp.github.io/img/0008/06.jpg" /></p>
+<p>Er ruft.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Ist sie im Korb?</p>
+<p><img src="https://global-asp.github.io/img/0008/07.jpg" /></p>
+<p>Ich beantworte.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
-<p>Ist sie außerhalb des Haus?</p>
+<p><img src="https://global-asp.github.io/img/0008/08.jpg" /></p>
+<p>Sie hört zu.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Hier ist sie!</p>
+<p><img src="https://global-asp.github.io/img/0008/09.jpg" /></p>
+<p>Was tust du?</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,18 @@
 </section>
 <section class="slide level1">
 
-<h2 id="wo-ist-meine-katze-1">Wo ist meine Katze?</h2>
-Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: German<br>
+<h2 id="was-tust-du-1">Was tust du?</h2>
+Writer: Nina Orange<br> Illustrations: Wiehan de Jager<br> Translation: <br> Language: German<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-are-you-doing'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
