--- a/stories/de/0009_wo_ist_meine_katze.html
+++ b/stories/de/0009_wo_ist_meine_katze.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Deutsch</div>
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
 
-<p>Ist die oben auf dem Schrank?</p>
+<p>Ist sie oben auf dem Schrank?</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
