--- a/stories/index.html
+++ b/stories/index.html
@@ -80,139 +80,139 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man-1">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#yue0001">yue</a></td>
+      <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
       <td><a href="http://africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a></td>
+      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#yue0003">yue</a></td>
+      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td> </td>
+      <td><a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#yue0006">yue</a></td>
+      <td><a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
       <td><a href="http://africanstorybook.org/stories/looking-water">Looking for water</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0007">eo</a>, <a href="#yue0007">yue</a></td>
+      <td><a href="#eo0007">eo</a>, <a href="#yue0007">yue</a>, <a href="#zh0007">zh</a></td>
     </tr>
     <tr>
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0008">da</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#ja0008">ja</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#ja0009">ja</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
       <td><a href="http://africanstorybook.org/stories/animals-uganda-7">The Animals of Uganda</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0010">eo</a>, <a href="#yue0010">yue</a></td>
+      <td><a href="#eo0010">eo</a>, <a href="#yue0010">yue</a>, <a href="#zh0010">zh</a></td>
     </tr>
     <tr>
       <td>0064</td>
       <td><a href="http://africanstorybook.org/stories/joy-goes-school">Joy goes to school.</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td> </td>
+      <td><a href="#zh0064">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
       <td><a href="http://africanstorybook.org/stories/adventures-supercow">The adventures of Supercow</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0078">yue</a></td>
+      <td><a href="#yue0078">yue</a>, <a href="#zh0078">zh</a></td>
     </tr>
     <tr>
       <td>0084</td>
       <td><a href="http://africanstorybook.org/stories/demane-and-demazane">Demane and Demazane</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#yue0084">yue</a></td>
+      <td><a href="#yue0084">yue</a>, <a href="#zh0084">zh</a></td>
     </tr>
     <tr>
       <td>0086</td>
       <td><a href="http://africanstorybook.org/stories/things-i-do-school-0">Things I do at school</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#yue0086">yue</a></td>
+      <td><a href="#yue0086">yue</a>, <a href="#zh0086">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0112">yue</a></td>
+      <td><a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0120">yue</a></td>
+      <td><a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0122</td>
       <td><a href="http://africanstorybook.org/stories/i-love-read">I love to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#yue0122">yue</a></td>
+      <td><a href="#yue0122">yue</a>, <a href="#zh0122">zh</a></td>
     </tr>
     <tr>
       <td>0123</td>
       <td><a href="http://africanstorybook.org/stories/lets-go">Let's go</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0123">yue</a></td>
+      <td><a href="#yue0123">yue</a>, <a href="#zh0123">zh</a></td>
     </tr>
     <tr>
       <td>0127</td>
       <td><a href="http://africanstorybook.org/stories/different-plays">Different Plays</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0127">eo</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
+      <td><a href="#eo0127">eo</a>, <a href="#ja0127">ja</a>, <a href="#yue0127">yue</a>, <a href="#zh0127">zh</a></td>
     </tr>
     <tr>
       <td>0147</td>
       <td><a href="http://africanstorybook.org/stories/my-family-and-i">My family and I</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td> </td>
+      <td><a href="#zh0147">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
       <td><a href="http://africanstorybook.org/stories/akatope">Akatope</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#sv0204">sv</a></td>
+      <td><a href="#no0204">no</a>, <a href="#sv0204">sv</a></td>
     </tr>
     <tr>
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#no0253">no</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#eo0253">eo</a>, <a href="#ja0253">ja</a>, <a href="#no0253">no</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0287</td>
       <td><a href="http://africanstorybook.org/stories/mr-fly-and-mr-big-head">Mr Fly and Mr Big Head </a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td> </td>
+      <td><a href="#no0287">no</a></td>
     </tr>
     <tr>
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td> </td>
+      <td><a href="#ne0294">ne</a></td>
     </tr>
   </tbody>
 </table>
@@ -627,7 +627,7 @@
       <td>Anansi kaj saĝeco</td>
       <td style="text-align: center"><a href="/stories/eo/0006_anansi_kaj_saĝeco.html">HTML</a> · <a href="/stories/eo/0006_anansi_kaj_saĝeco_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/eo.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></td>
-      <td> </td>
+      <td><a name="eo0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -687,6 +687,13 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>0008</td>
+      <td>Was tust du?</td>
+      <td style="text-align: center"><a href="/stories/de/0008_was_tust_du.html">HTML</a> · <a href="/stories/de/0008_was_tust_du_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a name="de0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
     <tr>
       <td>0009</td>
       <td>Wo ist meine Katze?</td>
@@ -942,7 +949,7 @@
       <td>Akatope</td>
       <td style="text-align: center"><a href="/stories/sv/0204_akatope.html">HTML</a> · <a href="/stories/sv/0204_akatope_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></td>
-      <td> </td>
+      <td><a name="sv0204"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
