--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Translating African Storybook Project stories into all the languages of the world.
 ">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="https://global-asp.github.io//">
   <link rel="alternate" type="application/rss+xml" title="Global African Storybook Project" href="https://global-asp.github.io//feed.xml" />
 </head>
