--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
 
     <header class="site-header">
   <div class="wrapper">
-<a href="http://global-asp.github.io"><img src="logo.png" alt="Global ASP logo" border="0" /></a>
+<a href="http://global-asp.github.io"><img src="/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
   <div class="wrapper">
 
