add new stories: nn, no

--- a/stories/nn/0001_ein-veldig-høg-mann.html
+++ b/stories/nn/0001_ein-veldig-høg-mann.html
@@ -63,7 +63,7 @@ Cornelius Gulare<br>nynorsk</div>
 
 <p><img src="https://global-asp.github.io/img/0001/06.jpg" /></p>
 
-<p>Denne mannen var for høy!</p>
+<p>Denne mannen var for høg!</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
