--- a/stories/nn/0009_kor-er-katten-min_slides.html
+++ b/stories/nn/0009_kor-er-katten-min_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ein-veldig-høg-mann" class="slide level1">
-<h1>Ein veldig høg mann</h1>
+<section id="kor-er-katten-min" class="slide level1">
+<h1>Kor er katten min?</h1>
 <center>
-<img src="https://global-asp.github.io/img/0001/01.jpg" />
+<img src="https://global-asp.github.io/img/0009/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/02.jpg" /></p>
-<p>Hakka hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
+<p>Kor er katten min?</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/03.jpg" /></p>
-<p>Døropninga hans for lav.</p>
+<p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
+<p>Er han under senga?</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/04.jpg" /></p>
-<p>Senga hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
+<p>Er han på toppen av skapet?</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/05.jpg" /></p>
-<p>Sykkelen hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
+<p>Er han bak sofaen?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/06.jpg" /></p>
-<p>Denne mannen var for høg!</p>
+<p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
+<p>Er han ved sida av bøtta?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/07.jpg" /></p>
-<p>Han laga eit veldig langt hakkeskaft.</p>
+<p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
+<p>Er han inne i korgen?</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/08.jpg" /></p>
-<p>Han laga ei veldig høy dørramme.</p>
+<p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
+<p>Er han utanfor huset?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/09.jpg" /></p>
-<p>Han laga ei veldig lang seng.</p>
+<p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
+<p>Her er han!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,39 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/10.jpg" /></p>
-<p>Han kjøpte ein veldig høg sykkel.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0001/11.jpg" /></p>
-<p>Han sett på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0001/12.jpg" /></p>
-<p>Han forlét huset sitt og budde i ein stor skog. Han levde i mange år.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ein-veldig-høg-mann-1">Ein veldig høg mann</h2>
-Writer: Cornelius Gulare<br> Illustrations: Catherine Groenewald<br> Translation: Espen Strangar-Johannessen<br> Language: Norwegian (Nynorsk)<br>
+<h2 id="kor-er-katten-min-1">Kor er katten min?</h2>
+Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> Illustrations: Bronwen Heath, Anonymous<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian (Nynorsk)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man-1'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
