--- a/stories/index.html
+++ b/stories/index.html
@@ -155,6 +155,12 @@
       <td><a href="#yue0086">yue</a>, <a href="#zh0086">zh</a></td>
     </tr>
     <tr>
+      <td>0095</td>
+      <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#nn0095">nn</a>, <a href="#no0095">no</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -820,6 +826,13 @@
       <td><a name="no0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0095</td>
+      <td>Zama er flink!</td>
+      <td style="text-align: center"><a href="/stories/no/0095_zama_er_flink.html">HTML</a> · <a href="/stories/no/0095_zama_er_flink_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/no.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>0204</td>
       <td>Akatope</td>
       <td style="text-align: center"><a href="/stories/no/0204_akatope.html">HTML</a> · <a href="/stories/no/0204_akatope_slides.html" target="_blank">Slideshow</a></td>
@@ -887,9 +900,16 @@
     <tr>
       <td>0009</td>
       <td>Kor er katten min?</td>
-      <td style="text-align: center"><a href="/stories/nn/0009_kvor-er-katten-min.html">HTML</a> · <a href="/stories/nn/0009_kvor-er-katten-min_slides.html" target="_blank">Slideshow</a></td>
+      <td style="text-align: center"><a href="/stories/nn/0009_kor-er-katten-min.html">HTML</a> · <a href="/stories/nn/0009_kor-er-katten-min_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
       <td><a name="nn0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td>Zama er flink!</td>
+      <td style="text-align: center"><a href="/stories/nn/0095_zama_er_flink.html">HTML</a> · <a href="/stories/nn/0095_zama_er_flink_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a name="nn0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -981,7 +1001,7 @@
         <ul class="social-media-list">
           
           <li>
-            <a href="https://github.com/global-asp">
+            <a href="https://github.com/global-asp/global-asp">
               <span class="icon  icon--github">
                 <svg viewBox="0 0 16 16">
                   <path fill="#828282" d="M7.999,0.431c-4.285,0-7.76,3.474-7.76,7.761 c0,3.428,2.223,6.337,5.307,7.363c0.388,0.071,0.53-0.168,0.53-0.374c0-0.184-0.007-0.672-0.01-1.32 c-2.159,0.469-2.614-1.04-2.614-1.04c-0.353-0.896-0.862-1.135-0.862-1.135c-0.705-0.481,0.053-0.472,0.053-0.472 c0.779,0.055,1.189,0.8,1.189,0.8c0.692,1.186,1.816,0.843,2.258,0.645c0.071-0.502,0.271-0.843,0.493-1.037 C4.86,11.425,3.049,10.76,3.049,7.786c0-0.847,0.302-1.54,0.799-2.082C3.768,5.507,3.501,4.718,3.924,3.65 c0,0,0.652-0.209,2.134,0.796C6.677,4.273,7.34,4.187,8,4.184c0.659,0.003,1.323,0.089,1.943,0.261 c1.482-1.004,2.132-0.796,2.132-0.796c0.423,1.068,0.157,1.857,0.077,2.054c0.497,0.542,0.798,1.235,0.798,2.082 c0,2.981-1.814,3.637-3.543,3.829c0.279,0.24,0.527,0.713,0.527,1.437c0,1.037-0.01,1.874-0.01,2.129 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
