--- a/stories/nn/0095_zama_er_flink_slides.html
+++ b/stories/nn/0095_zama_er_flink_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ein-veldig-høg-mann" class="slide level1">
-<h1>Ein veldig høg mann</h1>
+<section id="zama-er-flink" class="slide level1">
+<h1>Zama er flink!</h1>
 <center>
-<img src="https://global-asp.github.io/img/0001/01.jpg" />
+<img src="https://global-asp.github.io/img/0095/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/02.jpg" /></p>
-<p>Hakka hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0095/02.jpg" /></p>
+<p>Veslebroren min søv veldig seint. Eg vaknar tidleg, fordi eg er flink!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/03.jpg" /></p>
-<p>Døropninga hans for lav.</p>
+<p><img src="https://global-asp.github.io/img/0095/03.jpg" /></p>
+<p>Eg er ho som slepp inn sola.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/04.jpg" /></p>
-<p>Senga hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0095/04.jpg" /></p>
+<p>&quot;Du er morgonstjerna mi&quot;, seier mamma.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/05.jpg" /></p>
-<p>Sykkelen hans var for kort.</p>
+<p><img src="https://global-asp.github.io/img/0095/05.jpg" /></p>
+<p>Eg vaskar meg sjølv, eg vil ikkje ha hjelp.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/06.jpg" /></p>
-<p>Denne mannen var for høg!</p>
+<p><img src="https://global-asp.github.io/img/0095/06.jpg" /></p>
+<p>Eg kan takla kaldt vann og blå stinkande såpa.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/07.jpg" /></p>
-<p>Han laga eit veldig langt hakkeskaft.</p>
+<p><img src="https://global-asp.github.io/img/0095/07.jpg" /></p>
+<p>Mamma minner på, “Gløym ikkje tennene.” Eg svarar: &quot;Aldri, ikkje eg!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/08.jpg" /></p>
-<p>Han laga ei veldig høy dørramme.</p>
+<p><img src="https://global-asp.github.io/img/0095/08.jpg" /></p>
+<p>Etter vask helsar eg på bestefar og tante og ynskjer dei ein god dag.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/09.jpg" /></p>
-<p>Han laga ei veldig lang seng.</p>
+<p><img src="https://global-asp.github.io/img/0095/09.jpg" /></p>
+<p>Så kler eg meg sjølv, &quot;Eg er stor no mamma,” seier eg.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/10.jpg" /></p>
-<p>Han kjøpte ein veldig høg sykkel.</p>
+<p><img src="https://global-asp.github.io/img/0095/10.jpg" /></p>
+<p>Eg kan kneppa knappar og spenna skorne mine.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/11.jpg" /></p>
-<p>Han sett på ein veldig høg stol. Han åt med ein veldig lang gaffel.</p>
+<p><img src="https://global-asp.github.io/img/0095/11.jpg" /></p>
+<p>Og eg sørgjer at for veslebror kjenner alle skulenyhenda.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0001/12.jpg" /></p>
-<p>Han forlét huset sitt og budde i ein stor skog. Han levde i mange år.</p>
+<p><img src="https://global-asp.github.io/img/0095/12.jpg" /></p>
+<p>I klassa gjer eg mitt beste i alle måtar.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,18 +195,27 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ein-veldig-høg-mann-1">Ein veldig høg mann</h2>
-Writer: Cornelius Gulare<br> Illustrations: Catherine Groenewald<br> Translation: Espen Strangar-Johannessen<br> Language: Norwegian (Nynorsk)<br>
+<p><img src="https://global-asp.github.io/img/0095/13.jpg" /></p>
+<p>Eg gjer alle desse gode tinga kvar dag. Men det eg likar mest, er å leika og leika!</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="zama-er-flink-1">Zama er flink!</h2>
+Writer: Michael Oguttu<br> Illustrations: Vusi Malindi<br> Translation: Espen Strangar-Johannessen<br> Language: Norwegian (Nynorsk)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man-1'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
