update master list

--- a/stories/master.html
+++ b/stories/master.html
@@ -475,8 +475,8 @@
     </tr>
     <tr>
       <td><a name="0081"></a>0081</td>
-      <td><a href="http://africanstorybook.org/stories/wat-vuzi-se-suster-ges%C3%AA-het">Wat Vuzi se suster gesê het</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://africanstorybook.org/stories/forest-snakes-0">Forest of snakes</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td><a name="0082"></a>0082</td>
@@ -1170,8 +1170,8 @@
     </tr>
     <tr>
       <td><a name="0220"></a>0220</td>
-      <td><a href="http://africanstorybook.org/stories/king-birds-4">King of birds</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="http://africanstorybook.org/stories/keeper-and-his-special-nursery-0">Keeper and his special nursery</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td><a name="0221"></a>0221</td>
