--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -5,7 +5,7 @@
     <title>ASP Imagebank Explorer</title>
     <meta content="">
     <link rel="stylesheet" type="text/css"
-      href="http://yegor256.github.io/tacit/tacit.min.css"/>
+      href="https://yegor256.github.io/tacit/tacit.min.css"/>
     <link rel="stylesheet" type="text/css"
       href="img.css"/>
     <script src="asp_img_wordlist.js" type="text/javascript"></script>
