update master - replace 0197

--- a/stories/master.html
+++ b/stories/master.html
@@ -1055,8 +1055,8 @@
     </tr>
     <tr>
       <td><a name="0197"></a>0197</td>
-      <td><a href="http://africanstorybook.org/stories/visiting-shores-lake-victoria">VISITING THE SHORES OF LAKE VICTORIA</a></td>
-      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+      <td><a href="http://africanstorybook.org/stories/my-first-day-market">My first day at the market</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td><a name="0198"></a>0198</td>
