update master list - replace 0183

--- a/stories/master.html
+++ b/stories/master.html
@@ -985,7 +985,7 @@
     </tr>
     <tr>
       <td><a name="0183"></a>0183</td>
-      <td><a href="http://africanstorybook.org/stories/my-village-0">My village</a></td>
+      <td><a href="http://africanstorybook.org/stories/hare-tricks-elephant-again">Hare tricks Elephant again</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
     </tr>
     <tr>
